@@ -101,7 +101,7 @@ public class ImagesController {
         try
         {
             // 构建上传目录的绝对路径
-            String absolutePath = new File(uploadPath).getAbsolutePath();
+            String absolutePath = uploadPath;
             // 确保目录存在，如果不存在，则创建
             if (!StringUtils.isEmpty(absolutePath))
             {
@@ -113,15 +113,15 @@ public class ImagesController {
                 }
                 SysImageResource sysImageResource = new ObjectMapper().readValue(formData, SysImageResource.class);
                 // 构建文件路径
-                String filePath = absolutePath + File.separator + "sys_img" + File.separator + sysImageResource.getImgPath();
+                String filePath = absolutePath + File.separator + sysImageResource.getImgPath();
                 // 复制文件到目标路径
-                Files.copy(file.getInputStream(), Path.of(filePath), StandardCopyOption.REPLACE_EXISTING);
+                Files.copy(file.getInputStream(), Paths.get(filePath), StandardCopyOption.REPLACE_EXISTING);
                 System.out.println(sysImageResource);
-                boolean isAddSysImg = imagesService.addSysImgData(sysImageResource,tokenInfo);
+                boolean isAddSysImg = imagesService.addSysImgData(sysImageResource, tokenInfo);
                 if (isAddSysImg)
                 {
-                    return Result.successCDM(filePath,"图片上传成功");
-                }else return Result.error("图片上传失败");
+                    return Result.successCDM(filePath, "图片上传成功");
+                } else return Result.error("图片上传失败");
             } else
             {
                 System.out.println("无法获取上传目录路径，图片上传失败");
@@ -133,6 +133,47 @@ public class ImagesController {
             return Result.error("图片上传失败");
         }
     }
+//    @Transactional
+//    @PostMapping("/uploadSysImg")
+//    public Result uploadSysImg(@RequestParam("file") MultipartFile file,
+//                               @RequestParam("formData") String formData,
+//                               @RequestHeader("Authorization") String tokenInfo)
+//    {
+//        try
+//        {
+//            // 构建上传目录的绝对路径
+//            String absolutePath = new File(uploadPath).getAbsolutePath();
+//            // 确保目录存在，如果不存在，则创建
+//            if (!StringUtils.isEmpty(absolutePath))
+//            {
+//                File uploadDir = new File(absolutePath);
+//                if (!uploadDir.exists())
+//                {
+//                    System.out.println("上传目录不存在");
+//                    return Result.error("无法获取上传目录路径");
+//                }
+//                SysImageResource sysImageResource = new ObjectMapper().readValue(formData, SysImageResource.class);
+//                // 构建文件路径
+//                String filePath = absolutePath + File.separator + "sys_img" + File.separator + sysImageResource.getImgPath();
+//                // 复制文件到目标路径
+//                Files.copy(file.getInputStream(), Path.of(filePath), StandardCopyOption.REPLACE_EXISTING);
+//                System.out.println(sysImageResource);
+//                boolean isAddSysImg = imagesService.addSysImgData(sysImageResource,tokenInfo);
+//                if (isAddSysImg)
+//                {
+//                    return Result.successCDM(filePath,"图片上传成功");
+//                }else return Result.error("图片上传失败");
+//            } else
+//            {
+//                System.out.println("无法获取上传目录路径，图片上传失败");
+//                return Result.error("图片上传失败");
+//            }
+//        } catch (IOException e)
+//        {
+//            e.printStackTrace();
+//            return Result.error("图片上传失败");
+//        }
+//    }
 
     /**
      * @description TODO 删除系统图片
